# Labs

./: CMakeLists.txt  Doxyfile  lose.cpp  matrixapp.1  test.cpp
MatrixApp/: CMakeLists.txt  Makefile  MatrixApp.vcxproj  main.cpp
MatrixApp/x64/Debug/: vc143.idb
MatrixApp/x64/Debug/MatrixApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
MatrixLib/: CMakeLists.txt  Makefile  MatrixLib.vcxproj  MatrixLib.vcxproj.filters  framework.h  matrix_operations.cpp
MatrixLib/install/include/: matrix_operations.h
MatrixLib/x64/Debug/: MatrixLib.dll.recipe  MatrixLib.ilk  MatrixLib.pch  vc143.idb
MatrixLib/x64/Debug/MatrixLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  MatrixLib.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
MatrixSolution/: MatrixSolution.vcxproj
html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  dir_42635ce864a652f3b33ee29a79db6100.html  dir_5b3cf1e96c13cf4ff5106f58e667775c.html  dir_72b92438deaa29e3ef29e57a728f0641.html  dir_be06eba69d89020aabdb90acd59361da.html  dir_c2b110d9dc80b296ab9ca1ab56c31948.html  dir_c93882932efc7c44321a732ef5f97014.html  dir_f5950acc4a87701b6a5e7e68421c3486.html  doxygen_crawl.html  files.html  framework_8h.html  framework_8h_source.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  main_8cpp_8o_8d.html  main_8cpp_8o_8d_source.html  main_8cpp_source.html  menudata.js  (+4 more)
(+9 files in other folders)
